test/fail_compilation/covariance.nt
module covariance;

macro import std.macro.assert;

class A {
    this() { }
    A get() { return new A; }
}

class C {
    this() { }
}

class B : A {
    this() { }
    override C get() { return new C; }
}

void main() { }
